<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game_screen">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Imageview1"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/classroom_1"
        tools:ignore="ImageContrastCheck,MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/dialogue_1"
        android:layout_width="511dp"
        android:layout_height="70dp"
        android:layout_marginStart="108dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Textview2"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ImageContrastCheck,MissingConstraints,TextContrastCheck"
        tools:layout_editor_absoluteY="4dp" />

    <ImageButton
        android:id="@+id/next_1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/Imagebutton"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@android:drawable/ic_media_play"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="310dp"
        android:layout_height="405dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ayane_1" />


</androidx.constraintlayout.widget.ConstraintLayout>